--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,20 @@
 [package]
 name = "xueyigou"
 version = "0.1.0"
-authors = ["Luck <luck@elapse.date>"]
+authors = ["临来笑笑生 <luck@elapse.date>"]
 edition = "2018"
+readme = "README.md"
+keywords = ["warp", "shop"]
+license = "MIT"
+repository = "https://github.com/vagicc/www.xueyigou.cn"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.4", features = ["macros", "rt-multi-thread","fs"] }
+tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread","fs"] }
 #tokio = { version = "1", features = ["full"] }
 # https://lib.rs/crates/https_demo
-warp = { version = "0.3.1", features = ["tls","multipart"] }
+warp = { version = "0.3.2", features = ["tls","multipart"] }
 #warp = { version = "0.3.1", features = ["compression","default","tls","websocket","multipart"] }
 #warp = "0.3.1"
 #warp-sessions = "1.0.14"
@@ -20,17 +24,17 @@ futures = { version = "0.3.17", default-features = false }
 bytes = "1.1.0"
 
 # json  serializing and deserializing 
-serde = {version = "1.0.125", features = ["derive"] }
-serde_derive = "1.0.125"
-serde_json = "1.0.64"
+serde = {version = "1.0.130", features = ["derive"] }
+serde_derive = "1.0.130"
+serde_json = "1.0.68"
 
 # 模板-隔离RUST和HTML
 # 基本用法: https://handlebarsjs.com/zh/guide/expressions.html#%E5%9F%BA%E6%9C%AC%E7%94%A8%E6%B3%95
-handlebars = "4.1.3"
+handlebars = "4.1.5"
 
 # diesel是Rust的ORM(对象关系映射器)和查询构建器
 # diesel为PostgreSQL、Mysql及SQLite提供了开箱即用的支持
-diesel = { version="1.4.6",features=["extras","postgres","r2d2"] }
+diesel = { version="1.4.8",features=["extras","postgres","r2d2"] }
 # 加载环境配置文件.env
 dotenv = "0.15.0"
 
